--- a/metal-toad.html
+++ b/metal-toad.html
@@ -30,7 +30,9 @@
             </div>
             <div class="cssContainer">
               <div class="projectImages">
-                <img class="mtLogo"src="img/mt-logo.png" alt="Metal Toad Logo">
+                <figure>
+                  <img class="mtLogo"src="img/mt-logo.png" alt="Metal Toad Logo">
+                </figure>
                   <div class="projectDetail" id="metalToadDetail">
                     <h3>Metal Toad Logo Before & After</h3>
                     <p>The Metal Toad brandmark remained the same. The logotype, on the other hand, had been replaced. The previous slab serif logotype was difficult to read when scaled down to smaller sizes and its industrial feel was better suited for a younger, scrappier Metal Toad.</p>
@@ -43,17 +45,21 @@
                   <h3>Metal Toad's Color Palette</h3>
                   <p>A secondary color palette was been developed to expand upon the primary color palette. The secondary colors follow the characteristics of the brand’s primary orange. Bright and playful, there is an element of curiosity to them that ties in with Metal Toad's core values.</p>
                 </div>
+                <figure>
       						<img class="typefaces" src="img/mt-3.png" alt="Metal Toad's Typefaces">    
+                 </figure> 
                   <div class="projectDetail" id="metalToadDetail">  
                   <h3>Typefaces</h3>
                   <p>Metal Toad's previous typeface, Helvetica is difficult to read on screen and kept Metal Toad from embracing a brand all their own. Helvetica was replaced with two new typefaces — Whitney and Interstate.</p>
                   <p>Whitney, Metal Toad's new primary typeface has a more organic structure than Helvetica, making it feel more warm and welcoming.</p>
                   <p>Interstate and Whitney were intentionally chosen and paired together for Metal Toad to offer a complementary and subtle sophistication that increases readability and enhances the user experience.</p>
                 </div>
-                  <img src="img/mt-6.gif" alt="Metal Toad Discovery Deliverables">
-                <div class="projectDetail" id="metalToadDetail"> 
-                  <h3>The refreshed brand applied to discovery materials.</h3>
-                </div>
+                  <figure>
+                    <img src="img/mt-6.png" alt="Metal Toad Discovery Deliverables">
+                  
+                    <figcaption>The refreshed brand applied to discovery materials.</figcaption>
+                  </figure>
+                
                 <div class="mt-9"> 
                   <img src="img/mt-7.jpg" alt="Buyer Persona Offsite">
                 </div>
