--- a/OpenSource HR unConference.html
+++ b/OpenSource HR unConference.html
@@ -43,6 +43,9 @@
               <img src="img/oshr-2.png" alt="OSHR Logo Sketches"/>
                 <figcaption>Open Source HR Logo</figcaption>
               </figure>
+              <img src="img/oshr-keynote.png" alt="Keynote"/>
+
+
 
     						<!---<img src="img/oshr-2.jpg" alt="PECI project image">
 
