--- a/metal-toad.html
+++ b/metal-toad.html
@@ -30,7 +30,7 @@
             </div>
             <div class="cssContainer">
               <div class="projectImages">
-                <figure>
+                <figure class="figurePad">
                   <img class="mtLogo"src="img/mt-logo.png" alt="Metal Toad Logo">
                 </figure>
                   <div class="projectDetail" id="metalToadDetail">
@@ -40,15 +40,15 @@
                   </div>
 
                 </div>
-      						<img src="img/mt-color-palette.png" alt="Metal Toad Color Palette">
+      						<img class="mtColorPalette"src="img/mt-color-palette.png" alt="Metal Toad Color Palette">
                 <div class="projectDetail" id="metalToadDetail">
                   <h3>Metal Toad's Color Palette</h3>
                   <p>A secondary color palette was been developed to expand upon the primary color palette. The secondary colors follow the characteristics of the brand’s primary orange. Bright and playful, there is an element of curiosity to them that ties in with Metal Toad's core values.</p>
                 </div>
-                <figure>
+                <figure class ="figurePad">
       						<img class="typefaces" src="img/mt-3.png" alt="Metal Toad's Typefaces">    
                  </figure> 
-                  <div class="projectDetail" id="metalToadDetail">  
+                  <div class="projectDetail" id="metalToadDetail">
                   <h3>Typefaces</h3>
                   <p>Metal Toad's previous typeface, Helvetica is difficult to read on screen and kept Metal Toad from embracing a brand all their own. Helvetica was replaced with two new typefaces — Whitney and Interstate.</p>
                   <p>Whitney, Metal Toad's new primary typeface has a more organic structure than Helvetica, making it feel more warm and welcoming.</p>
