--- a/peci.html
+++ b/peci.html
@@ -37,10 +37,19 @@
               <div class="projectImages">
                 <img src="img/peci-1.png" alt="PECI project image">
     						<img src="img/peci-2.png" alt="PECI project image">
-    						<img src="img/peci-3.png" alt="PECI project image">
-                <img src="img/peci-4.jpg" alt="PECI project image">
-                <img src="img/peci-5.png" alt="PECI project image">
-                <img src="img/peci-6.jpg" alt="PECI project image">
+    						  <img src="img/peci-3.png" alt="PECI project image">
+                <figure class="figurePad">
+                  <img src="img/peci-4.jpg" alt="PECI project image">
+                </figure>
+                  <img src="img/peci-5.png" alt="PECI project image">
+                <figure class="figurePad">
+                  <img src="img/peci-6.jpg" alt="PECI project image">
+                </figure>
+                <div class="peciInline">
+                  <img src="img/peci-7.jpg" alt="PECI project image">
+                  <img src="img/peci-8.jpg" alt="PECI project image">
+                  <img src="img/peci-9.jpg" alt="PECI project image">
+                </div>  
               </div>
               <div id="moreProjects">
                 <div class="moreProjects">
