--- a/peci.html
+++ b/peci.html
@@ -45,10 +45,10 @@
                 <figure class="figurePad">
                   <img src="img/peci-6.jpg" alt="PECI project image">
                 </figure>
-                <div class="peciInline">
-                  <img src="img/peci-7.jpg" alt="PECI project image">
-                  <img src="img/peci-8.jpg" alt="PECI project image">
-                  <img src="img/peci-9.jpg" alt="PECI project image">
+                <div id="peciInline">
+                  <img class="peciInline1"src="img/peci-7.jpg" alt="PECI project image">
+                  <img class="peciInline2" src="img/peci-8.jpg" alt="PECI project image">
+                  <img class="peciInline3" src="img/peci-9.jpg" alt="PECI project image">
                 </div>  
               </div>
               <div id="moreProjects">
