--- a/peci.html
+++ b/peci.html
@@ -34,22 +34,18 @@
               <p>Visit <a href="http://peci.org/about/origin/">A Legacy in Common</a>.</p>
             </div>
             <div id="cssContainer">
-              <div class="projectImages">
+              <div class="projectImages peciImages">
                 <img src="img/peci-1.png" alt="PECI project image">
     						<img src="img/peci-2.png" alt="PECI project image">
-    						  <img src="img/peci-3.png" alt="PECI project image">
-                <figure class="figurePad">
-                  <img src="img/peci-4.jpg" alt="PECI project image">
-                </figure>
-                  <img src="img/peci-5.png" alt="PECI project image">
-                <figure class="figurePad">
-                  <img src="img/peci-6.jpg" alt="PECI project image">
-                </figure>
-                <div id="peciInline">
+  						  <img src="img/peci-3.png" alt="PECI project image">
+                <img src="img/peci-4.jpg" alt="PECI project image">
+                <img src="img/peci-5.png" alt="PECI project image">
+                <img src="img/peci-6.jpg" alt="PECI project image">
+                <!--<div id="peciInline">
                   <img class="peciInline1"src="img/peci-7.jpg" alt="PECI project image">
                   <img class="peciInline2" src="img/peci-8.jpg" alt="PECI project image">
                   <img class="peciInline3" src="img/peci-9.jpg" alt="PECI project image">
-                </div>  
+                </div>-->
               </div>
               <div id="moreProjects">
                 <div class="moreProjects">
@@ -62,7 +58,6 @@
                     <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                     <li><a href="code-girl.html">Code Girl</a></li>
                     <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-
                   </ul>
                 </div>
               </div>
