--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="projectFive"><a href="code-girl.html">Code Girl</a></li>
                 <li class="projectSix"><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
                 <li class="projectSeven"><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
-                <li class="projectEight"><a href="opensource-hr.html">Open Source HR UnConFerence</a></li>
+                <li class="projectEight"><a href="open-source.html">Open Source HR UnConFerence</a></li>
                 <li class="projectNine"><a href="sony-pictures.html">Sony Pictures</a></li>
                 <li class="projectTen"><a href="lettering.html">Lettering and Calligraphy</a></li>
                 <li class="projectEleven"><a href="ux.html">UX Audits and Recommendations</a></li>
