--- a/open-source.html
+++ b/open-source.html
@@ -39,11 +39,11 @@
                 <figcaption>Brainstorming and Sketches </figcaption>
               </figure>
               <figure class="oshrLogo">
-              <img src="img/oshr-2.png" alt="OSHR Logo Sketches"/>
-              <img src="img/oshr-2.png" alt="OSHR Logo Sketches"/>
-                <figcaption>Open Source HR Logo</figcaption>
+                <img src="img/oshr-2.png" alt="OSHR Logo Sketches"/>
+              <figcaption>Open Source HR Logo</figcaption>
               </figure>
               <img src="img/oshr-keynote.png" alt="Keynote"/>
+              <img src="img/oshr-live.png" alt="Keynote"/>
 
 
 
