--- a/books.html
+++ b/books.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/favorites-styles.css">
         <script src="js/scripts.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,500,600|Rubik:300,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500,600i|Rubik:300,400,500" rel="stylesheet">
     </head>
     <body>
         <div class="container">
