--- a/lettering.html
+++ b/lettering.html
@@ -23,35 +23,14 @@
       			</nav>
           </header>
           <main role="main">
-            <div class="projectDetail" id="peciDetail">
-              <h2>Open Source HR unConference</h2>
-              <h3>Art Direction, Branding, Strategy, Design</h3>
-              <p>Open Source HR is a collaboration of human resource professionals that work in tech. In the spirit of open source technologies, Open Source HR brings together those interested in sharing HR resources, discussing relevant topics, and creating a network of allies in the HR field.</p> 
-
-              <p>Open Source HR kicked off this year with an unConference-- two days of grassroots workshops, think-tanks, and resource sharing.</p>
-
-              <p>Being a new organization with a small budget, a logo was needed as well as some low cost tools for the group to use to be most effective.</p>
+            <div class="projectDetail" id="unfiDetail">
+              <h2>UNFI Blue Marble</h2>
+              <h3>UX, UI Design</h3>
+              <p>Overhaul of UNFI Blue Marble's product information management system. Includes UX and UI. Handoff was accompanied by a style guide created for those who maintain the platform to use.</p>
             </div>
             <div id="cssContainer">
               <div class="projectImages">
-                <figure>
-                <img src="img/oshr-1.png" alt="OSHR Logo Sketches"/>
-                <figcaption>Brainstorming and Sketches </figcaption>
-              </figure>
-              <figure class="oshrLogo">
-                <img src="img/oshr-2.png" alt="OSHR Logo Sketches"/>
-              <figcaption>Open Source HR Logo</figcaption>
-              </figure>
-              <img src="img/oshr-keynote.png" alt="Keynote"/>
-              <img src="img/oshr-live.png" alt="Keynote"/>
-
-
-
-    						<!---<img src="img/oshr-2.jpg" alt="PECI project image">
-
-                <img src="img/peci-4.jpg" alt="PECI project image">
-                <img src="img/peci-5.png" alt="PECI project image">
-                <img src="img/peci-6.jpg" alt="PECI project image">-->
+                <img src="img/iMac-unfi-bmb-pim.jpg" alt="UNFI Blue Marble PIM">
               </div>
               <div id="moreProjects">
                 <div class="moreProjects">
@@ -59,8 +38,8 @@
                 </div>
                 <div class="projectList">
                   <ul>
+                    <li><a href="peci.html">PECI: A Legacy in Common</a></li>                    
                     <li><a href="project-firefly.html">Project Firefly</a></li>
-                    <li><a href="unfi.html">UNFI Blue Marble</a></li>
                     <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                     <li><a href="code-girl.html">Code Girl</a></li>
                     <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
