--- a/ux.html
+++ b/ux.html
@@ -23,29 +23,14 @@
       			</nav>
           </header>
           <main role="main">
-            <div class="projectDetail" id="peciDetail">
-              <h2>PECI: A Legacy in Common</h2>
-              <h3>Art Direction, UX, + Design</h3>
-              <p>In 1979, the Portland City Council founded a nonprofit corporation called Portland Energy Conservation, Inc. to carry out the country’s first energy conservation policy.</p> 
-
-              <p>For the non-profit’s 35th anniversary our small storytelling taskforce wanted to do something big yet heartfelt. Although employees banded together over PECI’s mission, its history had been lost. Our team went on a long, strange journey to find it, uncovering a deep and profound story that not only tells the history of the nonprofit, but the story of how PECI shaped Portland’s progressive identity that we each know and love today.</p>
-
-              <p>Our small but passionate 5 person team completed research, interviews, content strategy, copywriting, design, and development to make the story come to life.</p>
-              <p>Visit <a href="http://peci.org/about/origin/">A Legacy in Common</a>.</p>
+            <div class="projectDetail" id="unfiDetail">
+              <h2>UNFI Blue Marble</h2>
+              <h3>UX, UI Design</h3>
+              <p>Overhaul of UNFI Blue Marble's product information management system. Includes UX and UI. Handoff was accompanied by a style guide created for those who maintain the platform to use.</p>
             </div>
             <div id="cssContainer">
               <div class="projectImages">
-                <img src="img/peci-1.png" alt="PECI project image">
-    						<img src="img/peci-2.png" alt="PECI project image">
-  						  <img src="img/peci-3.png" alt="PECI project image">
-                <img class="full-width" src="img/peci-4.jpg" alt="PECI project image">
-                <img src="img/peci-5.png" alt="PECI project image">
-                <img class="full-width"src="img/peci-6.jpg" alt="PECI project image">
-                <!--<div id="peciInline">
-                  <img class="peciInline1"src="img/peci-7.jpg" alt="PECI project image">
-                  <img class="peciInline2" src="img/peci-8.jpg" alt="PECI project image">
-                  <img class="peciInline3" src="img/peci-9.jpg" alt="PECI project image">
-                </div>-->
+                <img src="img/iMac-unfi-bmb-pim.jpg" alt="UNFI Blue Marble PIM">
               </div>
               <div id="moreProjects">
                 <div class="moreProjects">
@@ -53,11 +38,18 @@
                 </div>
                 <div class="projectList">
                   <ul>
-                    <li><a href="project-firefly.html">Project Firefly</a></li>
-                    <li><a href="unfi.html">UNFI Blue Marble</a></li>
-                    <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
+                    <li><a href="peci.html">PECI: A Legacy in Common</a></li>               
+                    <li><a href="sony-pictures.html">Sony Pictures</a></li>
+                    <li><a href="oshr">Open Source unConference</a></li>
+                    <li><a href="metalt-toad.html">Metal Toad Brand Refresh</a></li>
                     <li><a href="code-girl.html">Code Girl</a></li>
+                    <li><a href="unfi.html">UNFI Blue Marble PIM</a></li>
+                    <li><a href="ux.html">UX Audits and Recommendations</a></li>
+                    <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
+                    <li><a href="project-firefly.html">Project Firefly</a></li>
                     <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
+                    <li><a href="lettering.html">UX Audit and Recommendations</a></li>
+
                   </ul>
                 </div>
               </div>
