--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Rubik:400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500,600i|Rubik:300,400,500" rel="stylesheet">
 </head>
     <style>
 
