--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/favorites-styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,500,600|Rubik:300,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500,600i|Rubik:300,400,500" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -30,16 +30,16 @@
             <div id="work" class="projects">
               <ul>
                 <li class="projectOne"><a href="peci.html">PECI: A Legacy in Common</a></li>
-                <li class="projectTwo"><a href="project-firefly.html">Project Firefly</a></li>
-                <li class="projectThree"><a href="unfi.html">UNFI Blue Marble</a></li>
-                <li class="projectFour"><a href="digital-diagrams.html"><h2>Digital Diagrams</h2></a><p>Strategy, Design</p></li>
+                <li class="projectTwo"><a href="sony-pictures.html">Sony Pictures</a></li>
+                <li class="projectThree"><a href="oshr.html">Open Source UnConference</a></li>
+                <li class="projectFour"><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
                 <li class="projectFive"><a href="code-girl.html">Code Girl</a></li>
-                <li class="projectSix"><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-                <li class="projectSeven"><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
-                <li class="projectEight"><a href="open-source.html">Open Source HR UnConFerence</a></li>
-                <li class="projectNine"><a href="sony-pictures.html">Sony Pictures</a></li>
-                <li class="projectTen"><a href="lettering.html">Lettering and Calligraphy</a></li>
-                <li class="projectEleven"><a href="ux.html">UX Audits and Recommendations</a></li>
+                <li class="projectSix"><a href="unfi.html">UNFI Blue Marble Product Information Management (PIM) System</a></li>
+                <li class="projectSeven"><a href="ux.html">UX Audit and Recommendations</a></li>
+                <li class="projectEight"><a href="digital-diagrams.html">Digital Diagrams</a></li>
+                <li class="projectNine"><a href="project-firefly.html">Project Firefly</a></li>
+                <li class="projectTen"><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
+                <li class="projectEleven"><a href="lettering.html">Lettering and Calligraphy</a></li>
               </ul>
             </div><!--Close Work Div-->
           </main>
