--- a/metal-toad.html
+++ b/metal-toad.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Rubik:400,500,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cormorant:300,400,500|Rubik:300,400" rel="stylesheet">
     <body>
         <div class="container">
           <header role="banner" class="banner">
