--- a/code-girl.html
+++ b/code-girl.html
@@ -30,11 +30,18 @@
             </div>
             <div id="cssContainer">
               <div class="projectImages">
-                <img src="img/code-girl-1.png" alt="Image of Code Girl poster at bus shelter">
-  							<img src="img/code-girl-poster-2.png" alt="Image of Code Girl poster">
-                <img src="img/code-girl-3.jpg" alt="Image of Code Girl poster">
-                <img src="img/code-girl-4.jpg" alt="Image of Code Girl poster">
-                <img src="img/code-girl-5.jpg" alt="Image of Code Girl poster">
+                <figure class ="figurePad">
+                  <img class="codeGirlDetail" src="img/code-girl-poster-2.png" alt="Code Girl">    
+                 </figure>   
+                <figure class ="figurePad">
+                  <img class="codeGirlDetail" src="img/code-girl-3.jpg" alt="Code Girl">    
+                 </figure> 
+                <figure class ="figurePad">
+                  <img class="codeGirlDetail" src="img/code-girl-4.jpg" alt="Code Girl">    
+                 </figure> 
+                <figure class ="figurePad">
+                  <img class="codeGirlDetail" src="img/code-girl-5.jpg" alt="Code Girl">    
+                 </figure> 
               </div>
               <div id="moreProjects">
                 <div class="moreProjects">
@@ -42,15 +49,22 @@
                 </div>
                 <div class="projectList">
                   <ul>
-                    <li><a href="peci.html">PECI: A Legacy in Common</a></li>                    
-                    <li><a href="project-firefly.html">Project Firefly</a></li>
-                    <li><a href="unfi.html">UNFI Blue Marble</a></li>
+                    <li><a href="peci.html">PECI: A Legacy in Common</a></li>               
+                    <li><a href="sony-pictures.html">Sony Pictures</a></li>
+                    <li><a href="oshr.html">Open Source unConference</a></li>
+                    <li><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
+                    <li><a href="code-girl.html">Code Girl</a></li>
+                    <li><a href="unfi.html">UNFI Blue Marble PIM</a></li>
+                    <li><a href="ux.html">UX Audits and Recommendations</a></li>
                     <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
+                    <li><a href="project-firefly.html">Project Firefly</a></li>
                     <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
+                    <li><a href="lettering.html">Lettering and Calligraphy</a></li>
                   </ul>
                 </div>
               </div>
             </div>
+                
           </main>
           <footer role="contactinfo">
             <div id="contact">
