--- a/metal-toad.html
+++ b/metal-toad.html
@@ -77,22 +77,28 @@
                   <p>Metal Toad has found this process to be successful in empowering Metal Toad employees to be an agent of their brand.</p>
                 </div> 
                </div>
-             </div><div id="moreProjects">
-                <div class="moreProjects">
-                  <h2>More Projects</h2><br>
-                </div>
-                <div class="projectList">
-                  <ul>
-                    <li><a href="peci.html">PECI: A Legacy in Common</a></li>                    
-                    <li><a href="project-firefly.html">Project Firefly</a></li>
-                    <li><a href="unfi.html">UNFI Blue Marble</a></li>
-                    <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
-                    <li><a href="code-girl.html">Code Girl</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-             
+             </div>
+               <div id="moreProjects">
+                 <div class="moreProjects">
+                   <h2>More Projects</h2><br>
+                 </div>
+                 <div class="projectList">
+                   <ul>
+                     <li><a href="peci.html">PECI: A Legacy in Common</a></li>               
+                     <li><a href="sony-pictures.html">Sony Pictures</a></li>
+                     <li><a href="oshr.html">Open Source unConference</a></li>
+                     <li><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
+                     <li><a href="code-girl.html">Code Girl</a></li>
+                     <li><a href="unfi.html">UNFI Blue Marble PIM</a></li>
+                     <li><a href="ux.html">UX Audits and Recommendations</a></li>
+                     <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
+                     <li><a href="project-firefly.html">Project Firefly</a></li>
+                     <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
+                     <li><a href="lettering.html">Lettering and calligraphy</a></li>
+                   </ul>
+                 </div>
+               </div>
+             </div>
           </main>
           <footer role="contactinfo">
             <div id="contact">
