--- a/sony-pictures.html
+++ b/sony-pictures.html
@@ -23,18 +23,28 @@
       			</nav>
           </header>
           <main role="main">
-            <div class="projectDetail" id="fireflyDetail">
-              <h2>Project Firefly</h2>
-              <h3>Art Direction, UX, Design</h3>
-              <p>UX and UI for Project Firefly, a platform connecting throught leaders with the world's most renouned companies. When I joined the team the desktop site had been built, but it was not responsive. Working backwards I collaborated with our developers to create  clear, sophisticated mobile experiences across a range of devices. The result was a satisfied client and an easy to use, intuitive mobile experience.</p>
-              <p>Visit <a href="https://project-firefly.com/">project-firefly.com</a>.</p>
+            <div class="projectDetail" id="sonyDetail">
+              <h2>SonyPictures.com</h2>
+              <h3>UX and UX Design</h3>
+              <p>Diagrams created in-conjunction with engineering, cloud, and project manangement team members at Metal Toad to illustrate Metal Toad's unique value add and approach to services.</p>
+              <p>SonyPictures.com is currently in development</p>
             </div>
-            <div id="cssContainer">
-              <div class="projectImages">
-                <img src="img/ff_web.jpg" alt="Project Firefly Desktop Image">
-    						<img src="img/ff_iphone.jpg" alt="Project Firefly Mobile Images">
-              </div>
-                <div id="moreProjects">
+              <div id="cssContainer">
+                <div class="projectImages">
+                  <img src="img/sony-before-1.png" alt="Sony Before">
+                  <img src="img/sony-before-2.png" alt="Sony Before 2">
+                  <div class="projectDetail" id="sonyDetail">
+                    <h3>SonyPictures.com Before</h3>
+                    <p>The Metal Toad brandmark remained the same. The logotype, on the other hand, had been replaced. The previous slab serif logotype was difficult to read when scaled down to smaller sizes and its industrial feel was better suited for a younger, scrappier Metal Toad.</p>
+                  </div>
+                  <img src="img/sony-1.png" alt="Sony After">
+                  <img src="img/sony-2.png" alt="Sony After">
+                  <img src="img/sony-3.png" alt="Sony After">
+                  <img src="img/sony-4.png" alt="Sony After">
+                  <div class="projectDetail" id="sonyDetail">
+                    <h3>SonyPictures.com After</h3>
+                    <p>The Metal Toad brandmark remained the same. The logotype, on the other hand, had been replaced. The previous slab serif logotype was difficult to read when scaled down to smaller sizes and its industrial feel was better suited for a younger, scrappier Metal Toad.</p>
+                </div>
                   <div class="moreProjects">
                     <h2>More Projects</h2><br>
                   </div>
