fixed more projects

--- a/peci.html
+++ b/peci.html
@@ -35,11 +35,11 @@
             </div>
             <div id="cssContainer">
               <div class="projectImages">
-                <img src="img/peci-1.png" alt="PECI project image">
-    						<img src="img/peci-2.png" alt="PECI project image">
-  						  <img src="img/peci-3.png" alt="PECI project image">
+                <img class="full-width"src="img/peci-1.png" alt="PECI project image">
+    						<img class="full-width"src="img/peci-2.png" alt="PECI project image">
+  						  <img class="full-width"src="img/peci-3.png" alt="PECI project image">
                 <img class="full-width" src="img/peci-4.jpg" alt="PECI project image">
-                <img src="img/peci-5.png" alt="PECI project image">
+                <img class="full-width"src="img/peci-5.png" alt="PECI project image">
                 <img class="full-width"src="img/peci-6.jpg" alt="PECI project image">
               </div>
                 <div id="moreProjects">
