--- a/sony-pictures.html
+++ b/sony-pictures.html
@@ -31,20 +31,29 @@
             </div>
               <div id="cssContainer">
                 <div class="projectImages">
-                  <img src="img/sony-before-1.png" alt="Sony Before">
-                  <img src="img/sony-before-2.png" alt="Sony Before 2">
+                  <img class="full-width" src="img/sony-before-1.png" alt="Sony Before">
+                  <img class ="full-width" src="img/sony-before-2.png" alt="Sony Before 2">
                   <div class="projectDetail" id="sonyDetail">
                     <h3>SonyPictures.com Before</h3>
                     <p>The Metal Toad brandmark remained the same. The logotype, on the other hand, had been replaced. The previous slab serif logotype was difficult to read when scaled down to smaller sizes and its industrial feel was better suited for a younger, scrappier Metal Toad.</p>
                   </div>
-                  <img src="img/sony-1.png" alt="Sony After">
-                  <img src="img/sony-2.png" alt="Sony After">
-                  <img src="img/sony-3.png" alt="Sony After">
-                  <img src="img/sony-4.png" alt="Sony After">
+                  <figure class="shadow">
+                    <img src="img/sony-1.png" alt="Sony After">
+                  </figure>
+                  <figure class="shadow">
+                    <img src="img/sony-2.png" alt="Sony After">
+                  </figure>
+                  <figure class="shadow">
+                    <img src="img/sony-3.png" alt="Sony After">
+                  </figure>
+                  <figure class="shadow">
+                    <img src="img/sony-4.png" alt="Sony After">
+                  </figure>
                   <div class="projectDetail" id="sonyDetail">
                     <h3>SonyPictures.com After</h3>
                     <p>The Metal Toad brandmark remained the same. The logotype, on the other hand, had been replaced. The previous slab serif logotype was difficult to read when scaled down to smaller sizes and its industrial feel was better suited for a younger, scrappier Metal Toad.</p>
                 </div>
+                  <div id="moreProjects">
                   <div class="moreProjects">
                     <h2>More Projects</h2><br>
                   </div>
