--- a/oshr.html
+++ b/oshr.html
@@ -40,7 +40,6 @@
             </figure>
               <figure class="figurePad">
                 <img src="img/oshr-2.png" alt="OSHR Logo"/>
-              <figcaption>Open Source HR Logo + Open Source HR Unconference Logo</figcaption>
               </figure>
                  <div class="projectDetail" id="oshrDetail">
                     <h3>Open Source HR and Open Source HR unConference Sketches</h3>
@@ -49,15 +48,15 @@
                   </div>
   
               
-              <figure>
+              <figure class="figurePad postcard">
                 <img class="full-width oshrPostcard" src="img/postcard.jpg" alt="OSHR Postcard"/>
-              <figcaption>Postcard to promote the event and take-aways for unConderence Attendees.
-              </figcaption>
+                <figcaption>Postcard to promote the event and take-aways for unConderence Attendees.</figcaption>
+            </figure>
             <figure class="figurePad poster">
               <img class ="poster" src="img/oshr-poster.jpg" alt="OSHR Poster"/>
             <figcaption>Open Source HR Unconference Poster</figcaption> 
             </figure>
-              <figure>
+              <figure class="figurePad t-shirt">
                 <img class="full-width"src="img/oshr-tshirt.jpg" alt="OSHR TShirt"/>
               <figcaption>T-Shirts</figcaption>    
               </figure>
@@ -66,8 +65,8 @@
                  <p>To welcome attendees to the unConference each person recieved a swag bag in the form of a branded toat that contained everything they could need, including snacks and water, but also on brand keepsakes to place on your wall, such as a poster, or a trendy t-shirt to wear to future tech and HR events.</p>
                  <p>The posters and postcards were used to promote the event within the community and signage was created to navigate attendees throughout the building.</p>
                </div>  
-             <figure class="figurePad">
-              <img class ="rejectedLogo" src="img/oshr-rejected-logo.png" alt="Rejected Logo"/>
+             <figure class="figurePad rejectedLogo">
+              <img src="img/oshr-rejected-logo.png" alt="Rejected Logo"/>
             <figcaption>Open Source HR Rejected Logo</figcaption> 
             </figure>
             <div class="projectDetail" id="oshrDetail">
