--- a/ux.html
+++ b/ux.html
@@ -23,7 +23,7 @@
       			</nav>
           </header>
           <main role="main">
-            <div class="projectDetail" id="unfiDetail">
+            <div class="projectDetail" id="uxDetail">
               <h2>UNFI Blue Marble</h2>
               <h3>UX, UI Design</h3>
               <p>Overhaul of UNFI Blue Marble's product information management system. Includes UX and UI. Handoff was accompanied by a style guide created for those who maintain the platform to use.</p>
