--- a/code-girl.html
+++ b/code-girl.html
@@ -29,18 +29,12 @@
               <p>Poster created for a screening of Code Girl at Living Room Theaters in Portland, Oregon. The screening was put on in conjunction with Metal Toad and community sponsors from the software industry in Portland. The Poster was used as promotion and as take-aways on the night of the event. All proceeds went to <a href="http://appcamp4girls.com/" target="_blank">App Camp for Girls.</a></p>
             </div>
             <div id="cssContainer">
-              <div class="projectImages">
+              <div class="projectImages codeGirlImages">
                 <figure class ="figurePad">
-                  <img class="codeGirlDetail" src="img/code-girl-poster-2.png" alt="Code Girl">    
+                  <img src="img/code-girl-poster-2.png" alt="Code Girl">    
                  </figure>   
-                <figure class ="figurePad">
-                  <img class="codeGirlDetail" src="img/code-girl-3.jpg" alt="Code Girl">    
-                 </figure> 
-                <figure class ="figurePad">
-                  <img class="codeGirlDetail" src="img/code-girl-4.jpg" alt="Code Girl">    
-                 </figure> 
-                <figure class ="figurePad">
-                  <img class="codeGirlDetail" src="img/code-girl-5.jpg" alt="Code Girl">    
+                <figure>
+                  <img class="full-width" src="img/code-girl-3.jpg" alt="Code Girl">    
                  </figure> 
               </div>
               <div id="moreProjects">
