--- a/digital-diagrams.html
+++ b/digital-diagrams.html
@@ -30,10 +30,12 @@
           <p>Visit <a href="https://www.metaltoad.com/services">metaltoad.com/services</a>.</p>
         </div>
         <div id="cssContainer">
-          <div class="projectImages">
+          <div class="projectImages diagramImages">
             <img src="img/mt-digital-diagrams-mac.jpg" alt="Digital Diagram on macbook">
-						<img src="img/digital-diagrams-1.png" alt="Information Management Digital Diagram">
+						<img class="full-width" src="img/digital-diagrams-1.png" alt="Information Management Digital Diagram">
+          <figure>
 						<img src="img/digital-diagrams-2.png" alt="Cloud Architecture Digital Diagram">
+          </figure>
           </div>
             <div id="moreProjects">
               <div class="moreProjects">
