--- a/holiday-card.html
+++ b/holiday-card.html
@@ -29,10 +29,16 @@
               <p>Metal Toad's holiday card had to meet two objectives: Capture the life of the Toads and give our clients the white-glove touch that they're used to.</p>
             </div>
             <div id="cssContainer">
-              <div class="projectImages">
-                <img src="img/mt-holiday-card.png" alt="Metal Toad Holiday Card">
-    						<img src="img/mt-holiday-card-1.png" alt="Metal Toad Holiday Card">
-    						<img src="img/mt-holiday-card-2.png" alt="Metal Toad Holiday Card">
+              <div class="projectImages cardImages">
+                <figure>
+                  <img src="img/mt-holiday-card.png" alt="Metal Toad Holiday Card">
+                </figure>
+                <figure> 
+    						  <img src="img/mt-holiday-card-1.png" alt="Metal Toad Holiday Card">
+                </figure>
+                <figure>
+    					   	<img src="img/mt-holiday-card-2.png" alt="Metal Toad Holiday Card">
+                 </figure>
               </div>
                 <div id="moreProjects">
                   <div class="moreProjects">
