--- a/oshr.html
+++ b/oshr.html
@@ -50,15 +50,12 @@
               
               <figure class="figurePad postcard">
                 <img class="full-width oshrPostcard" src="img/postcard.jpg" alt="OSHR Postcard"/>
-                <figcaption>Postcard to promote the event and take-aways for unConderence Attendees.</figcaption>
             </figure>
-            <figure class="figurePad poster">
-              <img class ="poster" src="img/oshr-poster.jpg" alt="OSHR Poster"/>
-            <figcaption>Open Source HR Unconference Poster</figcaption> 
-            </figure>
-              <figure class="figurePad t-shirt">
-                <img class="full-width"src="img/oshr-tshirt.jpg" alt="OSHR TShirt"/>
-              <figcaption>T-Shirts</figcaption>    
+            <!-- <figure class="figurePad poster"> -->
+              <!-- <img class ="poster" src="img/oshr-poster.jpg" alt="OSHR Poster"/> --> 
+<!--             </figure>
+ -->        <figure class="figurePad t-shirt">
+                <img class="full-width"src="img/oshr-tshirt.jpg" alt="OSHR TShirt"/>  
               </figure>
               <div class="projectDetail" id="oshrDetail">
                  <h3>Open Source Swag!</h3>
@@ -73,14 +70,14 @@
                <p>Sometimes we have to let go...</p>
                <p>The rejected logo used to the same typefaces as the chosen one, but had a more utilitarian feel with it's color palette and lockup. The lines mimic the lines of code.</p>
              </div>
-             <figure>
+             <!-- <figure>
                 <img class="full-width" src="img/oshr-live.png" alt="Open Source HR Event"/>
                 <figcaption>Open Source HR Unconference</figcaption>
              </figure>  
              <figure>
                <img src="img/oshr-keynote.png" alt="Keynote"/>
                <figcaption>Keynote Slide</figcaption>
-             </figure>
+             </figure> -->
 
 
 
