--- a/project-firefly.html
+++ b/project-firefly.html
@@ -30,9 +30,13 @@
               <p>Visit <a href="https://project-firefly.com/">project-firefly.com</a>.</p>
             </div>
             <div id="cssContainer">
-              <div class="projectImages">
-                <img src="img/ff_web.jpg" alt="Project Firefly Desktop Image">
-    						<img src="img/ff_iphone.jpg" alt="Project Firefly Mobile Images">
+              <div class="projectImages fireflyImages">
+                <figure>
+                  <img src="img/ff_web.jpg" alt="Project Firefly Desktop Image">
+                </figure>
+                <figure>
+      						<img src="img/ff_iphone.jpg" alt="Project Firefly Mobile Images">
+                </figure>    
               </div>
                 <div id="moreProjects">
                   <div class="moreProjects">
