--- a/unfi.html
+++ b/unfi.html
@@ -29,8 +29,10 @@
               <p>Overhaul of UNFI Blue Marble's product information management system. Includes UX and UI. Handoff was accompanied by a style guide created for those who maintain the platform to use.</p>
             </div>
             <div id="cssContainer">
-              <div class="projectImages">
-                <img src="img/iMac-unfi-bmb-pim.jpg" alt="UNFI Blue Marble PIM">
+              <div class="projectImages unfiImages">
+                <figure>
+                  <img src="img/iMac-unfi-bmb-pim.jpg" alt="UNFI Blue Marble PIM">
+              </figure>
               </div>
                 <div id="moreProjects">
                   <div class="moreProjects">
